# Check-Inn

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yml
scripts/: download_node.js
sidecar/: index.js  package-lock.json  package.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1.sql
src-tauri/src/: commands.rs  main.rs
src/lib/modules/: registry.ts
src/lib/services/: sidecar.svelte.ts
src/lib/stores/: session.svelte.ts  settings.svelte.ts
src/lib/utils/: template.ts
src/routes/: Dashboard.svelte  History.svelte  Settings.svelte  Stats.svelte
