[package]
name = "check-inn"
version = "0.1.3"
description = "A Tauri App"
authors = ["Mitayan Chakma"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
